open file or sharepoint link from search results